<resources>

    <!-- GENERAL -->
    <string name="app_name">WiFi-Manager</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="global_on_off_switch">On/Off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remove_entry">Remove entry</string>
    <string name="button_start">Start</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_cancel">Cancel</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>


    <!-- DRAWER ENTRIES -->
    <string name="fragment_wifilist">Allowed WiFi Networks</string>
    <string name="fragment_schedule">Schedule</string>
    <string name="fragment_settings">Settings</string>
    <string name="activity_help">Help</string>
    <string name="fragment_about">About</string>
    <string name="group_communicate">Communicate</string>


    <!-- ACTIVITY TITLES -->
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_details">Details</string>


    <!-- CONTENT STRINGS -->
    <string name="header_wifilist">List of managed WiFi networks</string>
    <string name="header_schedule">List of active time slots</string>
    <string name="header_about">About</string>


    <!-- WIFI STRINGS -->
    <string name="wifi_ssid_text">%1$s</string>
    <string name="wifi_bssid_text">MAC: %1$s</string>
    <string name="wifi_multi_bssid_text">%1$d related MACs</string>
    <string name="wifi_num_cells_text">Related cells: %1$d</string>
    <string name="wifi_enable_wifi_to_scan">You have to enable WiFi in order to add a new network.</string>
    <string name="wifi_enable_wifi">Enable WiFi</string>
    <string name="wifi_hidden_wifi_text">--Hidden WiFi--</string>


    <!-- WIFI PICKER DIALOG STRINGS -->
    <string name="wifi_picker_dialog_title">Select network</string>
    <string name="wifi_picker_dialog_button_cancel">Cancel</string>


    <!-- SCHEDULE STRINGS -->
    <string name="schedule_time_text">From %1$d:%2$02d to %3$d:%4$02d</string>


    <!-- TIME PICKER DIALOG STRINGS -->
    <string name="time_picker_dialog_title_choose_start_time">Choose start time</string>
    <string name="time_picker_dialog_title_choose_end_time">Choose end time</string>
    <string name="time_picker_dialog_title_choose_title">Choose title</string>
    <string name="time_picker_dialog_text_title_hint">Time slot %1$d</string>


    <!-- ABOUT STRINGS -->
    <string name="about_goal">Goal</string>
    <string name="about_whatdoesitdo">Privacy Friendly WiFi-Manager keeps track of the cell tower ids in your area while you are connected to a Wi-Fi. By keeping this information, the app tries to learn
    where your WiFi is located without using GPS.
    </string>
    <string name="about_privacy">Privacy</string>string>
    <string name="about_whyprivacyfriendly">This privacy friendly app preserves your privacy by tracking least necessary data. All data is kept on your phone. No data is sent
        to anybody. We also try to use least permissions possible.
    </string>
    <string name="about_author">Authors:</string>
    <string name="about_affiliation"><b>In affiliation with</b></string>
    <string name="about_moreinfo">More information can be found at:</string>
    <string name="about_secusourl"><a href="https://www.secuso.informatik.tu-darmstadt.de/en/research/results/privacy-friendly-apps">https://www.secuso.org</a></string>
    <string name="about_version">Version %1$s</string>
    <string name="about_privacyfriendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under Apache version 2.0. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="about_url_github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-wifi">Github-Repo</a></string>
    <string name="about_url_secuso" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>


    <!-- HELP STRINGS -->
    <string name="help_actionbar_string">Help</string>
    <string name="help_actionbar_substring_welcome">Welcome to Privacy Friendly WiFi-Manager</string>
    <string name="help_category_permissions">Permissions</string>
    <string name="help_title_coarse_location">Access coarse location</string>
    <string name="help_desc_coarse_location">The permission for your coarse location is needed to retrieve nearby cell information.</string>
    <string name="help_category_tutorial">Tutorial</string>
    <string name="help_category_tutorial_title">Tutorial</string>
    <string name="help_category_tutorial_desc">Shows the tutorial.</string>
    <string name="help_category_privacy_info">Privacy Info</string>

    <!-- TUTORIAL -->
    <string name="help_actionbar_string_basics">Tutorial: Basics</string>
    <string name="help_actionbar_substring_step">Step %1$d</string>
    <string name="help_actionbar_substring_step0">Granting Permissions</string>
    <string name="help_actionbar_substring_step1">Enabling the Manager</string>
    <string name="help_actionbar_substring_step2">Adding a Wi-Fi</string>
    <string name="help_actionbar_substring_step3">Delete a Wi-Fi</string>
    <string name="help_content_step0_description">A permission is needed to retrieve nearby cell information. To use location-based features of WiFi-Manager, starting with Android 6, you have to grant access to your coarse location. If you want to use this functionality, you can request the necessary permission later.</string>
    <string name="help_content_step1_description">To activate the WiFi-Manager, you have to enable it by toggling the on/off button. This enables its learning feature and collects the cell ids around your Wi-Fi. It also lets WiFi-Manager take control of toggling your phone\'s Wi-Fi on/off.</string>
    <string name="help_content_step2_description">Now lets add a known WiFi to the list of managed WiFis. Touch the add-button on the bottom and then select a Wi-Fi in your range.</string>
    <string name="help_content_step3_description">To delete a Wi-Fi in your list, simply press a little longer on the Wi-Fi list. Then delete a Wi-Fi by pressing on the trashcan symbol beside its name.</string>
    <string name="help_welcome_description"><b>Welcome to Privacy Friendly WiFi-Manager!</b>\r\nThis app helps you automatically turning on/off your Wi-Fi while you are not near a known WiFi.\r\n\r\n<b>How it works:</b> While you are sitting in an area with a WiFi, you are surrounded by radio masts providing you a \'cell\'
        for your mobile phone. WiFi-Manager remembers which cell is near your Wi-Fi, to turn it right on when you are coming home, or turning it off, when you are leaving (e.g. work/school).\r\n\r\nBy using the schedule, you can also define time slots, when your phone\'s Wi-Fi should automatically be turned off (e.g. at night).\r\n\r\nTap \'start\' to take a tour.
    </string>

    <!-- NOTIFICATION -->
    <string name="notification_content_text">An unmanaged Wi-Fi connection has been established</string>
    <string name="notification_content_info">Unmanaged connection</string>
    <string name="notification_unknown_wifi_title">New unmanaged Wi-Fi</string>
    <string name="notification_unknown_wifi_title_format">New unmanaged Wi-Fi: %1$s</string>
    <string name="notification_button_add">Manage this connection automatically</string>
    <string name="notification_main_text">Touch to manage connections</string>
    <string name="toast_wifi_added">WiFi %1$s now managed.</string>


    <!-- SETTINGS STRINGS -->
    <string name="settings_general">General Settings</string>
    <string name="settings_respect_signal_strength">Respect signal strength</string>
    <string name="settings_respect_signal_strength_desc">Cellular signal strength will be respected for location estimation.</string>
    <string name="settings_show_notification_to_add_unmanaged_wi_fis">Show notifications</string>
    <string name="settings_show_notification_to_add_unmanaged_wi_fis_desc">A notification will be shown when connected to unmanaged Wi-Fis.</string>
    <string name="settings_grant_permissions">Request permissions</string>
    <string name="settings_grant_permissions_desc">Request permissions needed for location-based services.</string>
    <string name="settings_developer">Developer Settings</string>
    <string name="settings_delete_logfile">Delete logfile</string>
    <string name="settings_info_logfile_deleted">Deleted logfile successfully.</string>
    <string name="settings_info_logfile_deletion_error">Logfile could not be deleted.</string>
    <string name="settings_flush_logfile">Flush logfile</string>
    <string name="settings_remove_first_run_flag">Remove first-run-flag</string>
    <string name="settings_hide_developer_settings">Hide developer settings</string>


    <!-- DETAILS STRINGS -->
    <string name="details_ssid_placeholder">SSID unknown</string>
    <string name="details_bssid_placeholder">MAC unknown</string>
    <string name="details_cellid_placeholder">Cell ID unknown</string>
    <string name="details_macs_header">MACs</string>
    <string name="details_cellids_header">Cell IDs</string>


    <!-- WIDGET STRINGS -->
    <string name="appwidget_text">Automatic Wi-Fi Management:</string>
    <string name="app_name_privacy" translatable="false">Privacy Friendly WiFi-Manager</string>
    <string name="about_author_names" translatable="false">Jan Henzel, Patrick Jauernig, Dennis Werner</string>
    <string name="help_category_general">General</string>
    <string name="help_welcome_summary">This app helps you automatically turning on/off your Wi-Fi while you are not near a known WiFi.</string>
    <string name="help_category_howitworks">How it works</string>
    <string name="help_goal_desc">The main goal is to avoid location tracking via Wi-Fi, but WiFi-Manager also saves battery life by automatically disabling your phones WiFi when it is not near a already known wireless network.</string>
    <string name="help_category_benefits">Benefits</string>
    <string name="help_benefits_desc">By switching of the Wi-Fi when it is not required, so called tracking via Wi-Fi is avoided. Privacy Friendly WiFi Manager also saves battery life by automatically disabling your phone´s Wi-Fi in case it is not near an already known Wi-Fi network.</string>
    <string name="help_content_step0_cm"><b>Note for CyanogenMod users (or users of CyanogenMod-based distributions):</b>\n Due to a bug in CyanogenMod 13 you have to enable the location service, also known as GPS, in your settings (in addition to the coarse location permission). Otherwise, no WiFi networks can be found.</string>

</resources>