<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.secuso.privacyfriendlywifi.view.TutorialActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tutorial_step_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/help_actionbar_substring_step0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/basics_step0_permission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/help_content_step0_description"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/help_content_step0_cm"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>


</ScrollView>
